--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,8 +5,8 @@ workflows:
       xcode: latest
       cocoapods: default
       vars:
-          XCODE_PROJECT: "TriangleApp.xcodeproj" # Isikan nama project Anda.
-          XCODE_SCHEME: "TriangleApp" # Isikan nama scheme project Anda.
+        XCODE_PROJECT: 'TriangleApp.xcodeproj' # Isikan nama project Anda.
+        XCODE_SCHEME: 'TriangleApp' # Isikan nama scheme project Anda.
     scripts:
       - name: Run tests
         script: |
@@ -14,7 +14,7 @@ workflows:
           -project "$XCODE_PROJECT" \
           -scheme "$XCODE_SCHEME" \
           -sdk iphonesimulator \
-          -destination 'platform=iOS Simulator,name=iPhone SE (3rd generation),OS=18.0' \
+          -destination 'platform=iOS Simulator,name=iPhone 17 Pro,OS=26.2' \
           clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
       - name: Build debug app
         script: |
